--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,10 +1,6 @@
 Options All -Indexes
  
- <IfModule rewrite_module>
-
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
+RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^ index.php [QSA,L]
-</IfModule>
-
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule . index.php [L]
